Inform user of error status when tunnel name server cannot be detected

--- a/src/main/res/values-de/strings.xml
+++ b/src/main/res/values-de/strings.xml
@@ -49,6 +49,7 @@
     <string name="vpnservice_error_handshake_failed">Handshake fehlgeschlagen</string>
     <string name="vpnservice_error_unknown_error_code">Unbekannter Fehler. Kode %d</string>
     <string name="vpnservice_error_unknown_error_string">Unbekannter Fehler. Grund: %s</string>
+    <string name="vpnservice_error_dns_detect_failed">Es wurden keine gültigen IPv4-Nameserver erkannt</string>
     <string name="idle">Leerlauf</string>
     <string name="warning">Warnung</string>
     <string name="error">Fehler</string>
