--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -76,6 +76,7 @@
     <string name="vpnservice_error_unknown_error_string">Unknown Error. Reason: %s</string>
     <string name="vpnservice_error_dns_detect_failed">No valid IPv4 name servers detected</string>
     <string name="vpnservice_error_create_interface_string">Failed to create tunnel network device</string>
+    <string name="vpnservice_error_no_active_network">No active network</string>
     <string name="idle">Idle</string>
     <string name="warning">Warning</string>
     <string name="error">Error</string>
